# stock-predictions

./: .gitignore  pyproject.toml
models/: AAPL_model.pth  AAPL_scalar.pkl  AMAT_model.pth  AMAT_scalar.pkl  AMZN_model.pth  AMZN_scalar.pkl  GOOG_model.pth  GOOG_scalar.pkl  KLAC_model.pth  KLAC_scalar.pkl  MSFT_model.pth  MSFT_scalar.pkl  QQQ_model.pth  QQQ_scalar.pkl  SMH_model.pth  SMH_scalar.pkl
stock_predictions/: __init__.py  model.pth  scalar.pkl  stock_lstm.py  train.py
