[tool.poetry]
name = "stock-predictions"
version = "0.1.0"
description = ""
authors = ["go-fireball <venkatachalapatee@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
