[tool.poetry]
name = "stock-predictions"
version = "0.1.0"
description = ""
authors = ["go-fireball <venkatachalapatee@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
yfinance = "^0.2.43"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

